# i-manage

./: .gitignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
backend/: .env_example  .gitignore  manage.py  pyproject.toml  requirements.txt
backend/api/: swagger.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_company_category.py  0003_booking_employees_booking_status.py  0004_company_email_company_image_company_is_active_and_more.py  0005_alter_company_closes_at_alter_company_opens_at.py  0006_alter_company_closes_at_alter_company_opens_at.py  0007_remove_company_email_remove_company_password_and_more.py  0008_service_price_alter_company_closes_at_and_more.py  0009_employee_email_alter_company_closes_at_and_more.py  0010_alter_company_closes_at_alter_company_opens_at_and_more.py  0011_company_identifier_alter_company_closes_at_and_more.py  0012_remove_company_category_alter_company_closes_at_and_more.py  0013_company_timezone_alter_company_closes_at_and_more.py  0014_alter_company_closes_at_alter_company_image_and_more.py  0015_alter_company_closes_at_alter_company_image_and_more.py  0016_company_address_alter_company_closes_at_and_more.py  0017_company_keywords_alter_company_closes_at_and_more.py  0018_remove_employee_phone_alter_company_closes_at_and_more.py  (+14 more)
backend/i_manage_api/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
backend/payments/: models.py  urls.py  views.py
backend/scripts/: complete_bookings.sh  expire_bookings.sh
backend/users/: models.py  serializers.py
(+305 files in other folders)
